{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 21,
  "lineage": "23af3c12-e73a-5f26-a09e-1c21c89e1716",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:678108275767:vpc/vpc-01248eafa1e51cece",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0cbc02d68d013ea1b",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-01a0ba25bff8ee3d6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01248eafa1e51cece",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02c5e38cb28ad0b15",
            "owner_id": "678108275767"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a239595849d7d2cc",
            "arn": "arn:aws:ec2:us-east-2:678108275767:instance/i-0b79780be4a69cc66",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b79780be4a69cc66",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "bidnest-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0df5c4a47387e6b01",
            "private_dns": "ip-172-31-32-34.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.32.34",
            "public_dns": "ec2-18-225-177-145.us-east-2.compute.amazonaws.com",
            "public_ip": "18.225.177.145",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-066a9f351c52e79cf",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "bidnest-app-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bc48ba5b7b5b5c82",
            "tags": {
              "Name": "bidnest-app"
            },
            "tags_all": {
              "Name": "bidnest-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d2608e9f2807de02"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.app",
            "data.aws_ami.amazon_linux",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:678108275767:security-group/sg-0d2608e9f2807de02",
            "description": "Allow HTTP on 8080 and SSH on 22 to the bidnest app server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d2608e9f2807de02",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "App HTTP",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bidnest-app-sg",
            "name_prefix": "",
            "owner_id": "678108275767",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bidnest-app-sg"
            },
            "tags_all": {
              "Name": "bidnest-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01248eafa1e51cece"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:678108275767:security-group/sg-0c7c7e6330a481097",
            "description": "Allow PostgreSQL access only from the bidnest app security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c7c7e6330a481097",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from app",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d2608e9f2807de02"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "bidnest-db-sg",
            "name_prefix": "",
            "owner_id": "678108275767",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bidnest-db-sg"
            },
            "tags_all": {
              "Name": "bidnest-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01248eafa1e51cece"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.app",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}